<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/addArticleFragment">

    <include
        android:id="@+id/include4"
        layout="@layout/fragment_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
...
                    android:clipToPadding="true"
                    android:orientation="horizontal"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:fontFamily="@font/open_sans"
                        android:text="@string/add_article_title"
                        android:textAllCaps="false"
                        android:textColor="@color/colorTitle"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/etTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="22dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="-10dp"
                        android:ems="10"
...
                        android:text="@string/add_article_confidential"
                        android:textAllCaps="false"
                        android:textColor="@color/colorTitle"
                        android:textSize="24sp" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/confidentialSwitch"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:layout_weight="1"
                        android:textColorLink="@color/colorAccent" />

...
                    android:clipToPadding="true"
                    android:orientation="horizontal"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <TextView
                        android:id="@+id/tvTopic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="15dp"
                        android:gravity="center_vertical"
                        android:text="@string/add_article_topic"
...
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/bg_8dp_corners"
                        android:elevation="4dp"
                        android:orientation="vertical">

                        <Spinner
                            android:id="@+id/dynamic_spinner"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:clipToPadding="true"
                            android:padding="5dp" />
                    </LinearLayout>
                </LinearLayout>
...
                        android:gravity="start|top"
                        android:inputType="textMultiLine"
                        android:padding="5dp" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/bg_8dp_corners"
...
