<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/articleFragment">

    <include
        android:id="@+id/include2"
        layout="@layout/fragment_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivBanner"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/open_sans_extrabold"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTitle"
        app:srcCompat="@drawable/bg_square" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="clip_vertical"
            android:layout_marginTop="150dp"
            android:paddingBottom="250dp">

            <ImageView
                android:id="@+id/ivBackgroundRound"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:minHeight="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/bg_round_top" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ivBackgroundRound">

                <com.mukesh.MarkdownView
                    android:id="@+id/tvArticleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/open_sans"
                    android:textSize="14sp"
                    app:layout_constraintHorizontal_bias="1.0" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/editingSection"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal"
                android:layout_marginTop="50dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintTop_toBottomOf="@id/linearLayout">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    android:padding="10dp">

                    <Button
                        android:id="@+id/btnEdit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="#FFF"
                        android:elevation="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteY="15dp" />

                    <ImageView
                        android:id="@+id/ivEdit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="45dp"
                        android:elevation="4dp"
                        android:scaleType="fitCenter"
                        app:layout_constraintBottom_toBottomOf="@id/btnEdit"
                        app:layout_constraintEnd_toEndOf="@id/btnEdit"
                        app:layout_constraintStart_toStartOf="@id/btnEdit"
                        app:layout_constraintTop_toTopOf="@id/btnEdit"
                        app:srcCompat="@android:drawable/ic_menu_edit"
                        app:tint="#000000"
                        tools:srcCompat="@android:drawable/ic_menu_edit" />

                    <TextView
                        android:id="@+id/tvEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:elevation="4dp"
                        android:fontFamily="@font/open_sans"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:text="@string/article_edit"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ivEdit" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    android:padding="10dp">

                    <Button
                        android:id="@+id/btnDelete"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="#FFF"
                        android:elevation="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteY="15dp" />

                    <ImageView
                        android:id="@+id/ivDelete"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="40dp"
                        android:elevation="4dp"
                        android:scaleType="fitCenter"
                        app:layout_constraintBottom_toBottomOf="@id/btnDelete"
                        app:layout_constraintEnd_toEndOf="@id/btnDelete"
                        app:layout_constraintStart_toStartOf="@id/btnDelete"
                        app:layout_constraintTop_toTopOf="@id/btnDelete"
                        app:srcCompat="@android:drawable/ic_menu_delete"
                        app:tint="#000000"
                        tools:srcCompat="@android:drawable/ic_menu_delete" />

                    <TextView
                        android:id="@+id/tvDelete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:elevation="4dp"
                        android:fontFamily="@font/open_sans"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:text="@string/article_delete"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ivDelete" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:clickable="true"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@android:color/white"
        app:tint="@null"
        app:srcCompat="@drawable/left_arrow_white"
        android:focusable="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>