...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:layout="@layout/fragment_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/topicToArticlesFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
...
                    android:textColor="@color/colorTitle"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/include2"
                    app:layout_constraintTop_toTopOf="@+id/include2" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvArticleList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="5dp"
                    android:radius="10dp"
                    tools:listitem="@layout/item_topic" />
            </LinearLayout>
...
