...
        <ImageView
            android:id="@+id/ivGuestLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/guest_icon_description"
            android:elevation="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/btnGuest"
            app:layout_constraintEnd_toEndOf="@+id/btnGuest"
            app:layout_constraintStart_toStartOf="@+id/btnGuest"
            app:layout_constraintTop_toTopOf="@+id/btnGuest"
            app:srcCompat="@drawable/icon_zocial_guest"
            app:tint="@null" />

...
