...
                    android:fontFamily="@font/open_sans_extrabold"
                    android:text="@string/general"
                    android:textColor="@color/colorTitle"
                    android:textSize="20sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTopic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:elevation="8dp"
                    android:outlineProvider="none"
                    tools:listitem="@layout/item_topic" />
...
